feat(Domain): Sections 생성